--- a/style.css
+++ b/style.css
@@ -18,10 +18,15 @@ body{
     border-bottom: solid black 1px;
     gap:10px;
     align-items: center;
+    position:sticky;
+    top: 0px;
+    background-color: white;
+    z-index: 1;
 
 }
 .navbar__s1__title{
     color: #da1ada;
+    
 }
 .navbar__s2{
     padding:10px;
@@ -36,6 +41,7 @@ body{
     border: none;
     font-size: 16px;
     width: 100%;
+    background-color: transparent;
 
 }
 .navbar__s2 input:focus{
@@ -49,11 +55,33 @@ body{
 
 }
 
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top:80%;
+    padding: 10px;
+    right: 80px;
+    display: none;  
+    
+}
+.mylearning:hover .mylearning__popup{
+
+    display: block;
+
+}
+
 .categories{
     display: flex;
     padding: 10px;
     border-bottom: solid black 1px;
     justify-content: space-around;
+    
 }
 
 .categories p{
@@ -61,10 +89,29 @@ body{
     color: white;
     padding: 10px;
     border-radius: 30px;
+    cursor: pointer;
+
+
 
 }
+
+
 .sale-image img{
     width: 100px;
+}
+
+.sale-image{
+    position: relative;
+}
+.sale-image__offer{
+    background-color: white;
+    color: black;
+    width: 35%;
+    position: absolute;
+    top: 30%;
+    left: 5%;
+    padding: 2%;
+    border: solid black 2px;
 }
 .recommended{
     padding: 10px;
