--- a/style.css
+++ b/style.css
@@ -64,10 +64,10 @@ body{
     background-color: white;
     border: solid black 1px;
     width: 100px;
-    top:80%;
-    padding: 10px;
-    right: 80px;
-    display: none;  
+    top:150%;
+    padding: 20px;
+    right: 0px;
+    display:none;  
     
 }
 .mylearning:hover .mylearning__popup{
@@ -90,9 +90,14 @@ body{
     padding: 10px;
     border-radius: 30px;
     cursor: pointer;
+    border: solid rgb(190, 23, 190) 1px;
+}
 
-
-
+.categories p:hover{
+    transition: 1s;
+    background-color: transparent;
+    color: #0a020a;
+    border: solid rgb(190, 23, 190) 1px;
 }
 
 
@@ -112,6 +117,20 @@ body{
     left: 5%;
     padding: 2%;
     border: solid black 2px;
+    animation-name:zoom;
+    animation-duration:2s;
+    opacity: 0;
+    animation-fill-mode:forwards;
+}
+@keyframes zoom {
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 .recommended{
     padding: 10px;
